PRJ_VER=1.4.5
SUMMARY=Fixed RHBZ 842856, 1027030; Added translations:fr_FR, ja_JP, ko_KR
REDHAT_BUGZILLA=1045868
[Changes]
- Resloves Bug 1027031 - CVE-2013-4509 ibus-chewing: ibus: visible password entry flaw [rhel-7.0]
- Resloves Bug 1045868 - ibus-chewing *again* not built with $RPM_OPT_FLAGS
