@@ -1,3 +1,11 @@
+* Mon Dec 23 2013 Ding-Yi Chen <dchen at redhat.com> - 1.4.4-1
+- Resolves Bug 842856 - ibus-chewing 1.4.3-1 not built with $RPM_OPT_FLAGS
+- Resolves Bug 1027030 - CVE-2013-4509 ibus-chewing: ibus: visible 
+  password entry flaw [fedora-all]
+  Thanks czchen for the GitHub pull request 39.
+- Added translations: fr_FR, ja_JP, ko_KR
+- Adopt cmake-fedora-1.2.0
+
 * Sat Aug 03 2013 Fedora Release Engineering <rel-eng@lists.fedoraproject.org> - 1.4.3-4
 - Rebuilt for https://fedoraproject.org/wiki/Fedora_20_Mass_Rebuild
 
